src/resolver/snapshots/rv__resolver__tests__binary_version_mismatch_lockfile.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
R6=2.4.0 (repository(url: http://cran/), type=source, path='', from_lockfile=true, from_remote=false, env_vars=[])
