src/resolver/snapshots/rv__resolver__tests__bioc_dependency.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
R6=2.5.1 (repository(url: http://bioc/packages/3.21/bioc), type=source, path='', from_lockfile=false, from_remote=false, env_vars=[])
