src/resolver/snapshots/rv__resolver__tests__bioc_dependency_not_in_bioc.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
--- unresolved --- 
R6 [listed in rproject.toml]
