src/resolver/snapshots/rv__resolver__tests__bioc_dependency_transitive_versioned.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
R6=2.5.1 (repository(url: http://bioc/packages/3.21/bioc), type=source, path='', from_lockfile=false, from_remote=false, env_vars=[])
lgr=0.4.4 (repository(url: http://cran/), type=source, path='', from_lockfile=false, from_remote=false, env_vars=[])
