src/resolver/snapshots/rv__resolver__tests__builtin_from_repo_lockfile.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
pkgA=1.0.0 (repository(url: http://posit/), type=source, path='', from_lockfile=true, from_remote=false, env_vars=[])
MASS=7.3-64 (repository(url: http://posit/), type=source, path='', from_lockfile=true, from_remote=false, env_vars=[])
