src/resolver/snapshots/rv__resolver__tests__builtin_pkg_from_git.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
MASS=7.3-99 (git(url: https://github.com/dummy/MASS, sha: somethinglikeasha, directory: None, tag: None, branch: Some("main")), type=source, path='', from_lockfile=false, from_remote=false, env_vars=[])
