src/resolver/snapshots/rv__resolver__tests__conflict_dep_requirement2.txt.snap
---
source: src/resolver/mod.rs
expression: out
---
rv.git.pkgD=0.0.1 (repository(url: http://repo1/), type=source, path='', from_lockfile=false, from_remote=false, env_vars=[])
rv.git.pkgE=0.0.0.1 (repository(url: http://repo1/), type=source, path='', from_lockfile=false, from_remote=false, env_vars=[])
rv.git.pkgA=0.0.5 (repository(url: http://repo1/), type=source, path='', from_lockfile=false, from_remote=false, env_vars=[])
rv.git.pkgA=0.0.4 (repository(url: http://repo2/), type=source, path='', from_lockfile=false, from_remote=false, env_vars=[])
--- requirement failures --- 
rv.git.pkgA : rv.git.pkgD requires (>= 0.0.5), rv.git.pkgE requires (< 0.0.5)
